--- a/web/index.html
+++ b/web/index.html
@@ -10,12 +10,12 @@
 
 <body>
 
-    <div class="wrapper" style="background-color: aliceblue;">
+    <div class="wrapper" >
         <h1>Hello!</h1>
         <h3 id="top">VScode is:</h3>
 
         <ul>
-            <li>Awesome</li>
+            <li>Awesome!!!!</li>
             <li>Cool</li>
             <li>Powerful</li>
             <li>Fast</li>
