--- a/ts/src/front/index.html
+++ b/ts/src/front/index.html
@@ -22,7 +22,7 @@
         </div>
         <button type="submit">Subscribe</button>
     </form>
-    <script src="HandleForm.js"></script>
+    <script src="../../dist/front/HandleForm.js"></script>
 </body>
 
 </html>
